<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background"
    >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/warning"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_title"
        android:text="@string/dialog_help_message"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        />
    <View
        android:id="@+id/darkgrey_line"
        android:layout_marginTop="20dp"
        android:layout_below="@id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_below="@id/darkgrey_line"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:weightSum="1"
        >
        <RelativeLayout
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/cancel"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="16sp" />
        </RelativeLayout>
        <View
            android:layout_width="0.6dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>
        <RelativeLayout
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/confirm"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
