<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    >

<LinearLayout
    android:layout_width="290dp"
    android:layout_height="335dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@mipmap/congratulation_background"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/congratulations"
        android:textColor="@color/keyguard_text_color_decline"
        android:textSize="29sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_title"
        android:text="@string/dialog_sent_help_subtitle_message"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_subtitle"
        android:text="@string/dialog_sent_help_message"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/btnConfirm"
        android:layout_width="147dp"
        android:layout_height="35dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_camera"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="147dp"
        android:layout_height="35dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_finish"
        android:gravity="center"
        android:textColor="@color/keyguard_text_color_decline"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
</RelativeLayout>